[package]
name = "yap"
version = "4.6.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winres]
LegalCopyright = "Copyright Alex-Beng © 2024"
FileDescription = "Yap for Genshin"

[dependencies]
image = "0.24.6"
imageproc = "0.23.0"
rayon = "1.5.1"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = "0.4.14"
tract-onnx = "0.15.4"
env_logger = "0.10.0"
enigo = "0.1.2"
clap = "2.33.3"
semver = "1.0.7"
hotkey = "0.3.1"
rand = "0.8"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "winuser", "winbase", "wingdi", "winnt", "securitybaseapi", "libloaderapi", "shellscalingapi"] }

# always use target build-dependencies for winres so that
# it won't get pulled for non-windows OSs (saves them resources)
[build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
panic = "abort"
strip = true
opt-level = 3
codegen-units = 1
